src/Components/MainMenuStack/StartStack/MainGameStack/SnapShot/SnapShotHolder/SnapShotBody/SnapShotBody.module.css
.snapshotBody {
    height: 530px;
    width: 519px;
    display: flex;
    flex-direction: column;
    align-items: center;
}

.upArrowHolder {
    height: 26px;
    width: 100%;
    display: flex;
    flex-direction: row;
    justify-content: center;
    margin-top: 3%;
    cursor: pointer;
}

.upArrow {
    width: 42px;
    height: 26px;
    z-index: 10;
    background-repeat: no-repeat;
}

.upArrowGreen {
    width: 42px;
    height: 26px;
    z-index: 10;
}

.body {
    display: grid;
    grid-template-columns: repeat(3, 109px);
    grid-template-rows: repeat(3, 80px);
    gap: 24px 36px;
    width: 411px;
    height: 312px;
    margin-top: 3%;
    margin-left: 13%;
}

.item {
    position: relative;
    width: 109px;
    height: 80px;
    overflow: hidden;
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
    cursor: pointer;
}

.itemThumbnail {
    position: absolute;
    inset: 0;
    width: 100%;
    height: 100%;
    object-fit: cover;
    z-index: 1;
}

.highlightedImage {
    position: absolute;
    inset: 0;
    z-index: 2;
    pointer-events: none;
    border: 3px solid #00e8ff;
    box-sizing: border-box;
    background: transparent;
    box-shadow: inset 0 0 0 1px rgba(0, 232, 255, 0.45);
}

.highlightedImage img {
    display: none;
}

.downArrowHolder {
    position: absolute;
    bottom: 23.5%;
    right: 46%;
    width: 42px;
    height: 26px;
    z-index: 9;
    cursor: pointer;
}

.downArrow {
    width: 42px;
    height: 26px;
    z-index: 10;
    background-repeat: no-repeat;
}

.downArrowGreen {
    width: 42px;
    height: 26px;
    z-index: 10;
}

.lowerContent {
    width: 75%;
    height: 13%;
    position: absolute;
    bottom: 9%;
    left: .5%;
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    gap: 37px;
}

.iconComponentHolder {
    height: 72px;
    width: 71px;
    justify-content: center;
    align-items: center;
    display: flex;
    flex-direction: row;
    margin-top: 3%;
    cursor: pointer;
}

.helpComponentHolder {
    width: 140px;
    height: 103px;
    position: absolute;
    justify-content: center;
    align-items: center;
    display: flex;
    flex-direction: row;
    bottom: 13%;
    right: 1%;
    z-index: 10;
}

.emptyMessage {
    position: absolute;
    top: 40%;
    left: 50%;
    transform: translateX(-50%);
    color: #fff;
    font-size: 13px;
    text-align: center;
    width: 70%;
    z-index: 1;
}

